--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -5,5 +5,6 @@ WORKDIR /app
 RUN apt update && apt -y upgrade
 RUN pip install fastapi
 RUN pip install uvicorn
+RUN pip install python-multipart
 
 CMD ["uvicorn", "src.main:app", "--host", "0.0.0.0", "--port", "8000", "--reload"]
