--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -6,5 +6,6 @@ RUN apt update && apt -y upgrade
 RUN pip install fastapi
 RUN pip install uvicorn
 RUN pip install python-multipart
+RUN pip install torch torchvision
 
 CMD ["uvicorn", "src.main:app", "--host", "0.0.0.0", "--port", "8000", "--reload"]
