--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,6 +23,8 @@ services:
     volumes:
       - ./api:/app
     command: uvicorn src.main:app --host 0.0.0.0 --port 8000 --reload
+    environment:
+      - GOOGLE_APPLICATION_CREDENTIALS=/app/api-key.json
 
 networks:
   app_net:
