--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,7 @@ services:
         ipv4_address: 172.30.0.2
     tty: true
     volumes:
-      - ./web:/app
+      - ./web/src:/app
 
   api:
     container_name: api
@@ -21,10 +21,10 @@ services:
         ipv4_address: 172.30.0.3
     tty: true
     volumes:
-      - ./api:/app
-    command: uvicorn src.main:app --host 0.0.0.0 --port 8000 --reload
+      - ./api/src:/app
+    command: uvicorn main:app --host 0.0.0.0 --port 8000 --reload
     environment:
-      - GOOGLE_APPLICATION_CREDENTIALS=/app/api-key.json
+      - GOOGLE_APPLICATION_CREDENTIALS=/app/config/api-key.json
 
 networks:
   app_net:
