--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -21,4 +21,4 @@ RUN apt-get update && \
 RUN python -m pip install 'git+https://github.com/facebookresearch/detectron2.git'
 
 
-CMD ["uvicorn", "src.main:app", "--host", "0.0.0.0", "--port", "8000", "--reload"]
+CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000", "--reload"]
