change: dish proposal layout

--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -5,6 +5,7 @@ WORKDIR /app
 RUN apt update && apt -y upgrade
 
 RUN pip install streamlit
+RUN pip install streamlit --upgrade
 RUN pip install -U pydantic
 
 ENTRYPOINT ["streamlit", "run"]
