update: switch between development and production environment

--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -1,4 +1,4 @@
-FROM python:3.11.5-slim-bullseye
+FROM python:3.11.5-slim-bullseye AS base
 
 WORKDIR /app
 
@@ -11,3 +11,10 @@ RUN pip install -U pydantic
 ENTRYPOINT ["streamlit", "run"]
 
 CMD ["main.py"]
+
+#本番環境
+FROM base AS production
+COPY ./app /app
+
+#開発環境
+FROM base AS development
