change: how to set server url

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -15,8 +15,7 @@ services:
     volumes:
       - ./client/app:/app
     environment:
-      - SERVER_IP=server
-      - SERVER_PORT=8000
+      - SERVER_BASE_URL=http://server:8000
 
   server:
     container_name: server
